Bridge manifest: per-mod TOML file + ADR-0019 + ADR-0020 + secret rename
Replaces the per-mixin .txt + index.txt scheme with one
META-INF/mcdp-mixin-bridges.toml per mod containing [[bridge]] entries.
Runtime parses with the existing MiniToml; eliminates the bespoke triplet
parser and the entire class of duplicate-key hazards (the
mc-fluid-physics AbstractBlockStateMixin regression). Single-file
findResource lookup also moots NeoForge UnionPath directory quirks.

McdpProvider now exposes one auto-bridge entry point:
registerAutoBridgeManifestToml(modLoader, tomlPath). The URL scan, dir
scan, and index scan APIs are removed. registerMod no longer auto-scans;
adapters call the toml registration explicitly after registerMod.

ADR-0019 captures the format + registration design and supersedes the
runtime-wiring + manifest-discovery errata in ADR-0018.
ADR-0020 documents the Maven Central publishing strategy
(com.vanniktech.maven.publish, automaticRelease=false manual review,
SONATYPE_USERNAME/PASSWORD + PGP_PRIVATE_KEY secrets).

publish.yml: rename secrets to SONATYPE_USERNAME, SONATYPE_PASSWORD,
PGP_PRIVATE_KEY. PGP_KEY_PASSWORD is optional (falls back to '' for
unprotected keys); PGP_KEY_ID dropped (single-key keyrings only).
MiniToml promoted from package-private to public so :core can call it.